change all references to portfolio.html to index.html

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 
   <body>
     <nav>
-        <a class = "current" href= "portfolio.html">Home</a>
+        <a class = "current" href= "index.html">Home</a>
         <p></p>
         <a href = "OOP/OOPmenu.html">OOP</a>
         <p></p>
@@ -27,7 +27,7 @@
     <u><b><p>Table of contents</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a href="portfolio.html">Home</a></td>
+        <td><a href="index.html">Home</a></td>
       </tr><tr>
         <td><a href = "OOP/OOPmenu.html">OOP</a></td>
       </tr><tr>
