--- a/Feng.html
+++ b/Feng.html
@@ -7,7 +7,7 @@
 
 <body>
   <nav>
-   <a href= "../portfolio.html">Home</a>
+   <a href= "../index.html">Home</a>
    <p></p>
    <a class = "current" href = "OOPmenu.html">OOP</a>
    <p></p>
