--- a/GUI/GUImenu.html
+++ b/GUI/GUImenu.html
@@ -7,7 +7,7 @@
 
 <body>
   <nav>
-   <a href= "../portfolio.html">Home</a>
+   <a href= "../index.html">Home</a>
    <p></p>
    <a href= "../OOP/OOPmenu.html">OOP</a>
    <p></p>
