--- a/OOP/OOP-L2-Feng/OOPLesson2.html
+++ b/OOP/OOP-L2-Feng/OOPLesson2.html
@@ -36,7 +36,7 @@
    </head>
    <body>
   <nav>
-   <a href= "../../portfolio.html">Home</a>
+   <a href= "../../index.html">Home</a>
    <p></p>
    <a class = "current" href = "../OOPmenu.html">OOP</a>
    <p></p>
