--- a/OOP/OOP-L2-Feng/OOPLesson2.html
+++ b/OOP/OOP-L2-Feng/OOPLesson2.html
@@ -54,7 +54,7 @@
     <u><b><p>Table of contents</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a href="../OOPMenu.html">What is OOP?</a></td>
+        <td><a href="../OOPmenu.html">What is OOP?</a></td>
       </tr><tr>
         <td><a href = "../OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
       </tr><tr>
