--- a/OOP/OOPmenu.html
+++ b/OOP/OOPmenu.html
@@ -47,6 +47,10 @@
     <h2>Basic OOP</h2>
     <p>In OOP, there are two things that make up an "object": Its fields, or characteristics, and its methods, or the things it can do. In this way, we can define complex objects, like a human. Each and every human has some properties that are the same, for example, hands, nose, arms, legs, eyes, etc. Each human also has methods, or actions that they can perform, for example, running, jumping, eating and sleeping.</p>
     <b><p>More can be found about this topic in <a href = "OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></p></b>
+    <h2></h2>
+    <p></p>
+    <h2>OOP Projects</h2>
+    <p>A simple project that I made (with a partner) to show basic OOP functionality. It recreates Snake and Ladders, and has a super class that can be used to create multiple other board games. <b>You can vist this page at <a href = "https://github.com/fengxiong322/BoardGames">SnakeAndLadders</a></b></p>
 
   </article>
 </section>
