--- a/GUI/GUImenu.html
+++ b/GUI/GUImenu.html
@@ -27,15 +27,15 @@
     <u><b><p>Table of contents</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a href="OOPMenu.html">What is OOP?</a></td>
+        <td><a href="GUImenu.html">Welcom to GUI!</a></td>
       </tr><tr>
-        <td><a href = "OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
+        <td><a href = "GUI-intro/JFrameintro.html">JFrame introduction</a></td>
       </tr><tr>
-        <td><a href="OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
+        <td><a href="GUI-L1-Feng/GUILesson1.html">GUI Lesson 1</a></td>
       </tr><tr>
-        <td><a href="OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
+        <td><a href="GUI-L2-Feng/GUILesson2.html">GUI Layouts</a></td>
       </tr><tr>
-        <td><a href="OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
+        <td><a href="GUI-L3-Feng/GUILesson3.html">GUI Lesson 3</a></td>
       </tr>
     </table>
   </aside>
@@ -43,10 +43,13 @@
   <article>
     <h1>Welcome to GUI!</h1>
     <p>This section contains all of my past work with the java swing library</p>
-    <p>The acronym "OOP" stands for Object Oriented Programming. This means that it attempts to model the physical world. In this OOP tutorial, I will be using our everyday life as an example.</p>
-    <h2>Basic OOP</h2>
-    <p>In OOP, there are two things that make up an "object": Its fields, or characteristics, and its methods, or the things it can do. In this way, we can define complex objects, like a human. Each and every human has some properties that are the same, for example, hands, nose, arms, legs, eyes, etc. Each human also has methods, or actions that they can perform, for example, running, jumping, eating and sleeping.</p>
-    <b><p>More can be found about this topic in <a href = "OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></p></b>
+    <h2>Basic GUI</h2>
+    <p>The first thing to learn about GUI is how to actually create a window to display your information. In the Java swing library, this is called a JFrame. JFrames are made to display information on the screen. You may add components into a JFrame, which allows it to display data. <b>To find out how to use JFrames and add simple things like buttons, vist <a href = "GUI-intro/JFrameintro.html">JFrame introduction</a></b></p>
+    <h2>functionality of GUI</h2>
+    <p>Now, we can explore some of the things you can do with java gui. One of the things you will learn is including things like buttons and drawings into you JFrame. Another thing you will learn is ActionListeners. Your JFrame should implement ActionListener if you would like to have interaction between the user and the program. ActionListeners can be added to different components, and can allow you program to respond things like user clicks.</p>
+    <p>You can checkout <a href = "GUI-L1-Feng/GUILesson1.html"> the first gui lesson</a> for more information</p>
+    <h2>GUI Layouts</h2>
+    <p>In the next section we talk about the different type of layouts in the Java GUI. In <a href = "GUI-L2-Feng/GUILesson2.html">Lesson 2</a>, I show examples of a flow layout and a group layout.</p>
 
   </article>
 </section>
