reformat and add about
redesign the aside menu so I can set current colour later

--- a/about.html
+++ b/about.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Feng's Portfolio</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="htmllayout.css">
   </head>
 
   <body>
     <nav>
-        <a class = "current" href= "index.html">Home</a>
+        <a href= "index.html">Home</a>
         <p></p>
         <a href = "OOP/OOPmenu.html">OOP</a>
         <p></p>
@@ -15,11 +15,11 @@
         <p></p>
         <a href="Projects/projects.html">Projects</a>
         <p></p>
-        <a href="about.html">About</a>
+        <a class = "current" href="about.html">About</a>
     </nav>
 
     <header>
-      <h2>Welcome To My Portfolio!</h2>
+      <h2>About Me!</h2>
     </header>
 
   <section>
@@ -41,8 +41,11 @@
   </aside>
 
   <article>
-    <img src="Word Art.png" style="width:800px;height:500px;">
-    <p> You can explore some of past work or more about me from the side bar on the left, or you can use the top navigation bar</p>
+    <p>Hello! My name is Feng, and this is my website. One of the reasons I created this website was to take a stab at explaining basic concepts of programming. I believe that to fully understand something, I must also be able to explain it clearly. However, I am always expanding this website, and it will go under continous development, to showcase my skills and to teach others new things.</p>
+    <p>I am a creative individual, and I love to work on programming projects. Not only can I come up with solutions to problems, I always go back and simplify my code. I believe that information should be free and clear. I make sure that I provide proper documentation to my files.</p>
+    <p>This currently contains most of my school work, that I have modified for public use. </p>
+    <p>Some of my acedemic interests are computer science, math, and physics. As hobbies, I enjoy playing basketball, and cross-country running</p>
+    <p>I've played around with many programming languages, but I prefer to use Java as my first choice.</p>
   </article>
 </section>
 
