delete dupe, fix css cause it looks bad

--- a/OOP/Gritty1/GrittyDetails1.html
+++ b/OOP/Gritty1/GrittyDetails1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Feng's Portfolio</title>
-  <link rel="stylesheet" href="../htmllayout.css">
+  <link rel="stylesheet" href="../../htmllayout.css">
 </head>
 
 <body>
