fix more consistancy problems

--- a/OOP/Advanced1/advanced.html
+++ b/OOP/Advanced1/advanced.html
@@ -27,15 +27,17 @@
     <u><b><p>Table of contents</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a href="OOPMenu.html">What is OOP?</a></td>
+        <td><a href="../OOPMenu.html">What is OOP?</a></td>
       </tr><tr>
-        <td><a href = "OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
+        <td><a href = "../OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
       </tr><tr>
-        <td><a href="OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
+        <td><a href="../OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
       </tr><tr>
-        <td><a href="OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
+        <td><a href="../OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
       </tr><tr>
-        <td><a href="OOP-L1-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
+        <td><a href="../OOP-L1-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
+      </tr><tr>
+        <td class = "current"><a href="Advanced1/advanced.html">Advanced OOP 1</a></td>
       </tr>
     </table>
   </aside>
