--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       </tr><tr>
         <td><a href="Projects/projects.html">Projects</a></td>
       </tr><tr>
-        <td><a class = "current" href="about.html">About</a></td>
+        <td class = "current"><a href="about.html">About</a></td>
       </tr>
     </table>
   </aside>
