--- a/OOP/OOP-L1-Feng/Excercise2/excercise.html
+++ b/OOP/OOP-L1-Feng/Excercise2/excercise.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <title>OOP In Fairy Tales</title>
+      <title>OOP Excercise 2</title>
         <link rel="stylesheet" href="../../../htmllayout.css">
    </head>
    <body>
@@ -16,7 +16,7 @@
    <a href="../../about.html">About</a>
  </nav>
   <header>
-  <h2>Fairy Tale OOP</h2>
+  <h2>Excercise 2</h2>
 </header>
  <section>
   <aside>
@@ -34,7 +34,8 @@
     </table>
   </aside>
   <article>
-
+    <h1>Excercise 2</h1>
+    <p>This is excercise 2 of the 3 part series. If you skipped excercise 1, be sure to go to <a href = "../Excercise1/excercise.html">Part 1</a> first.</p>
   </article>
 </section>
 </body>
