--- a/OOP/OOP-L1-Feng/Excercise1/excercise.html
+++ b/OOP/OOP-L1-Feng/Excercise1/excercise.html
@@ -5,15 +5,15 @@
    </head>
    <body>
   <nav>
-   <a href= "../../index.html">Home</a>
+   <a href= "../../../index.html">Home</a>
    <p></p>
-   <a class = "current" href = "../OOPmenu.html">OOP</a>
+   <a class = "current" href = "../../OOPmenu.html">OOP</a>
    <p></p>
-   <a href="../../GUI/GUImenu.html">GUI</a>
+   <a href="../../../GUI/GUImenu.html">GUI</a>
    <p></p>
-   <a href="../../Projects/projects.html">Projects</a>
+   <a href="../../../Projects/projects.html">Projects</a>
    <p></p>
-   <a href="../../about.html">About</a>
+   <a href="../../../about.html">About</a>
  </nav>
   <header>
   <h2>Excercise 1</h2>
