--- a/OOP/OOP-L1-Feng/Excercise1/excercise.html
+++ b/OOP/OOP-L1-Feng/Excercise1/excercise.html
@@ -64,7 +64,10 @@
         weight += 4;//The animal's weight increases by 4
       else//If you chose to feed the animal anything else...
         weight += 1;//The animal's weight increases by 1
-  }
+  }</pre>
+  <p>Finally, we want to be able to run your program. We can do this by declaring a main method. This method is where you use all of the other methods to create a meaningful result. In this example, we make a few different animals</p>
+<pre class = "codeSample">
+
   </article>
 </section>
 </body>
