Add more information

--- a/OOP/OOP-L1-Feng/Excercise1/excercise.html
+++ b/OOP/OOP-L1-Feng/Excercise1/excercise.html
@@ -37,7 +37,7 @@
     <h1>Excercise 1</h1>
     <p>Welcome to the first part in this three part series. Here, we learn about the general format of a basic OOP styled program</p>
     <h1>The Instance Variables</h1>
-    <p>Imagine we have a class, that describe the state of a certain Animal. For instance, its name, if its tired or hungry, and its weight. These things are declared as instance variables. These are put at the top of the class, after the opening line of the class. Instance variables should be private. This is to prevent other classes from making changes that shouldn't be possible. For instance, something my try to multiply the weight of an Animal by 100. This may not make sense. We will talk more about how we can prevent this later.</p>
+    <p>Imagine we have a class, that describe the state of a certain Animal. For instance, its name, if its tired or hungry, and its weight. These things are declared as instance variables. These are put at the top of the class, after the opening line of the class. Instance variables should be private. This is to prevent other classes from making changes that shouldn't be possible. For instance, something may try to multiply the weight of an Animal by 100. This may not make sense. We will talk more about how we can prevent this later.</p>
     <pre class = codeSample>public class Animal{
   //Instance variables go here
   private String name;
