--- a/OOP/OOP-L1-Feng/Excercise3/excercise.html
+++ b/OOP/OOP-L1-Feng/Excercise3/excercise.html
@@ -23,7 +23,7 @@
     <u><b><p>Table of contents</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a href="../OOPLesson1.html">What is OOP?</a></td>
+        <td><a href="../OOPLesson1.html">OOP Lesson 1</a></td>
       </tr><tr>
         <td><a href = "../Excercise1/excercise.html">Excercise 1</a></td>
       </tr><tr>
