--- a/OOP/OOP-L1-Feng/OOPLesson1.html
+++ b/OOP/OOP-L1-Feng/OOPLesson1.html
@@ -34,9 +34,21 @@
         <td><a href="../OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
       </tr>
     </table>
+    <u><b><p>Excercises</p></b></u>
+    <table style = "width:100%">
+      <tr>
+        <td><a class = "current" href="">OOP Lesson 1</a></td>
+      </tr><tr>
+        <td><a href = "Excercise1/excercise.html">Excercise 1</a></td>
+      </tr><tr>
+        <td><a href="Excercise2/excercise.html">Excercise 2</a></td>
+      </tr><tr>
+        <td><a href="Excercise3/excercise.html">Excercise 3</a></td>
+      </tr>
   </aside>
   <article>
-
+    <h1>Excercises</h1>
+    <p>This is part one, taught in excercises. to begin go to the side bar, and press Excercise 1!</p>
   </article>
 </section>
 </body>
