--- a/OOP/OOP-L1-Feng/OOPLesson1.html
+++ b/OOP/OOP-L1-Feng/OOPLesson1.html
@@ -45,6 +45,7 @@
       </tr><tr>
         <td><a href="Excercise3/excercise.html">Excercise 3</a></td>
       </tr>
+    </table>
   </aside>
   <article>
     <h1>Excercises</h1>
