--- a/OOP/OOP-L1-Feng/Exercise1/exercise.html
+++ b/OOP/OOP-L1-Feng/Exercise1/exercise.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <title>OOP Excercise 1</title>
+      <title>OOP exercise 1</title>
         <link rel="stylesheet" href="../../../htmllayout.css">
    </head>
    <body>
@@ -16,25 +16,25 @@
    <a href="../../../about.html">About</a>
  </nav>
   <header>
-  <h2>Excercise 1</h2>
+  <h2>Exercise 1</h2>
 </header>
  <section>
   <aside>
     <u><b><p>Table of contents</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a href="../OOPLesson1.html">What is OOP?</a></td>
+        <td><a href="../OOPLesson1.html">OOP Lesson 1</a></td>
       </tr><tr>
-        <td class = "current"><a href = "">Excercise 1</a></td>
+        <td class = "current"><a href = "">Exercise 1</a></td>
       </tr><tr>
-        <td><a href="../Excercise2/excercise.html">Excercise 2</a></td>
+        <td><a href="../Exercise2/exercise.html">Exercise 2</a></td>
       </tr><tr>
-        <td><a href="../Excercise3/excercise.html">Excercise 3</a></td>
+        <td><a href="../Exercise3/exercise.html">Exercise 3</a></td>
       </tr>
     </table>
   </aside>
   <article>
-    <h1>Excercise 1</h1>
+    <h1>exercise 1</h1>
     <p>Welcome to the first part in this three part series. Here, we learn about the general format of a basic OOP styled program</p>
     <h1>The Instance Variables</h1>
     <p>Imagine we have a class, that describe the state of a certain Animal. For instance, its name, if its tired or hungry, and its weight. These things are declared as instance variables. These are put at the top of the class, after the opening line of the class. Instance variables should be private. This is to prevent other classes from making changes that shouldn't be possible. For instance, something may try to multiply the weight of an Animal by 100. This may not make sense. We will talk more about how we can prevent this later.</p>
