--- a/OOP/OOP-L1-Feng/Exercise2/exercise.html
+++ b/OOP/OOP-L1-Feng/Exercise2/exercise.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <title>OOP Excercise 2</title>
+      <title>OOP Exercise 2</title>
         <link rel="stylesheet" href="../../../htmllayout.css">
    </head>
    <body>
@@ -16,7 +16,7 @@
    <a href="../../../about.html">About</a>
  </nav>
   <header>
-  <h2>Excercise 2</h2>
+  <h2>Exercise 2</h2>
 </header>
  <section>
   <aside>
@@ -25,17 +25,17 @@
       <tr>
         <td><a href="../OOPLesson1.html">What is OOP?</a></td>
       </tr><tr>
-        <td><a href = "../Excercise1/excercise.html">Excercise 1</a></td>
+        <td><a href = "../Exercise1/exercise.html">Exercise 1</a></td>
       </tr><tr>
-        <td class = "current"><a href="">Excercise 2</a></td>
+        <td class = "current"><a href="">Exercise 2</a></td>
       </tr><tr>
-        <td><a href="../Excercise3/excercise.html">Excercise 3</a></td>
+        <td><a href="../Exercise3/exercise.html">Exercise 3</a></td>
       </tr>
     </table>
   </aside>
   <article>
-    <h1>Excercise 2</h1>
-    <p>This is excercise 2 of the 3 part series. If you skipped excercise 1, be sure to go to <a href = "../Excercise1/excercise.html">Part 1</a> first.</p>
+    <h1>Exercise 2</h1>
+    <p>This is exercise 2 of the 3 part series. If you skipped exercise 1, be sure to go to <a href = "../Exercise1/exercise.html">Part 1</a> first.</p>
   </article>
 </section>
 </body>
