--- a/OOP/OOP-L1-Feng/Exercise3/exercise.html
+++ b/OOP/OOP-L1-Feng/Exercise3/exercise.html
@@ -25,11 +25,11 @@
       <tr>
         <td><a href="../OOPLesson1.html">OOP Lesson 1</a></td>
       </tr><tr>
-        <td><a href = "../Excercise1/excercise.html">Excercise 1</a></td>
+        <td><a href = "../Exercise1/exercise.html">Exercise 1</a></td>
       </tr><tr>
-        <td><a href="../Excercise2/excercise.html">Excercise 2</a></td>
+        <td><a href="../Exercise2/exercise.html">Exercise 2</a></td>
       </tr><tr>
-        <td class = "current"><a href="">Excercise 3</a></td>
+        <td class = "current"><a href="">Exercise 3</a></td>
       </tr>
     </table>
   </aside>
