--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -17,7 +17,6 @@
    <p></p>
    <a href="../about.html">About</a>
  </nav>
-
  <header>
   <h2>Projects</h2>
 </header>
@@ -34,9 +33,13 @@
 
   <article>
     <h1>My Projects</h1>
-    <p>This is a list of all my projects, organized in chronological order. </p>
+    <p>This is a list of all my projects, organized from most recent to earliest project</p>
+    <h1>Algorithm Implementation</h1>
+    <p>This is a project to discover different algorithms. I started with a few simple algorithms, and I am currently working on a fft implementation. The repository is <a href = "https://github.com/fengxiong322/Algorithm-Implementations">here</a></p>
+    <h1>Discord Bot</h1>
+    <p>Discord bot because honestly why not. Just a collection of games and other random functions. The code is currently very messy, and I plan on cleaning it up in the future. <a href = "https://github.com/fengxiong322/ISP11">Bot code</a></p>
     <h1>ISP 11</h1>
-    <p>This is my isp. It runs a hangman game. You can find the repository here at <a href = "https://github.com/fengxiong322/ISP11"></a></p>
+    <p>This is my isp. It runs a hangman game. You can find the repository <a href = "https://github.com/fengxiong322/ISP11">here</a></p>
   </article>
 </section>
 
