Start editing base

--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -3,6 +3,11 @@
 <head>
   <title>Feng's Portfolio</title>
   <link rel="stylesheet" href="../htmllayout.css">
+  <style>
+    article a{
+      target: "_blank";
+    }
+  </style>
 </head>
 
 <body>
@@ -39,7 +44,7 @@
     <h1>Discord Bot</h1>
     <p>Discord bot because honestly why not. Just a collection of games and other random functions. The code is currently very messy, and I plan on cleaning it up in the future. <a href = "https://github.com/fengxiong322/ISP11">Bot code</a></p>
     <h1>ISP 11</h1>
-    <p>This is my isp. It runs a hangman game. You can find the repository <a href = "https://github.com/fengxiong322/ISP11">here</a></p>
+    <p>This is my isp. It runs a hangman game. You can find the repository <a href = "https://github.com/fengxiong322/ISP11" target = "_blank">here</a></p>
   </article>
 </section>
 
