--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Feng's Portfolio</title>
+		<base href = "https://fengxiong322.github.com/">
     <link rel="stylesheet" href="htmllayout.css">
 	</head>
 
