--- a/OOP/OOPmenu.html
+++ b/OOP/OOPmenu.html
@@ -2,20 +2,21 @@
 <html>
 <head>
   <title>Feng's Portfolio</title>
+  <base href = "https://fengxiong322.github.io/">
   <link rel="stylesheet" href="../htmllayout.css">
 </head>
 
 <body>
   <nav>
-   <a href= "../index.html">Home</a>
+   <a href= "index.html">Home</a>
    <p></p>
    <a class = "current" href = "OOPmenu.html">OOP</a>
    <p></p>
-   <a href="../GUI/GUImenu.html">GUI</a>
+   <a href="GUI/GUImenu.html">GUI</a>
    <p></p>
-   <a href="../Projects/projects.html">Projects</a>
+   <a href="Projects/projects.html">Projects</a>
    <p></p>
-   <a href="../about.html">About</a>
+   <a href="about.html">About</a>
  </nav>
 
  <header>
@@ -27,15 +28,15 @@
     <u><b><p>Table of contents</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a href="OOPmenu.html">What is OOP?</a></td>
+        <td class = "current"><a href="OOP/OOPmenu.html">What is OOP?</a></td>
       </tr><tr>
-        <td><a href = "OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
+        <td><a href = "OOP/OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
       </tr><tr>
-        <td><a href="OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
+        <td><a href="OOP/OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
       </tr><tr>
-        <td><a href="OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
+        <td><a href="OOP/OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
       </tr><tr>
-        <td><a href="OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
+        <td><a href="OOP/OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
       </tr>
     </table>
   </aside>
@@ -46,7 +47,7 @@
     <p>The acronym "OOP" stands for Object Oriented Programming. This means that it attempts to model the physical world. In this OOP tutorial, I will be using our everyday life as an example.</p>
     <h2>Basic OOP</h2>
     <p>In OOP, there are two things that make up an "object": Its fields, or characteristics, and its methods, or the things it can do. In this way, we can define complex objects, like a human. Each and every human has some properties that are the same, for example, hands, nose, arms, legs, eyes, etc. Each human also has methods, or actions that they can perform, for example, running, jumping, eating and sleeping.</p>
-    <b><p>More can be found about this topic in <a href = "OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></p></b>
+    <b><p>More can be found about this topic in <a href = "OOP/OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></p></b>
     <h2></h2>
     <p></p>
     <h2>OOP Projects</h2>
