--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>About Me</title>
+    <base href = "https://fengxiong322.github.io/">
     <link rel="stylesheet" href="htmllayout.css">
   </head>
 
