--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Feng's Portfolio</title>
-		<base href = "https://fengxiong322.github.com/">
+		<base href = "https://fengxiong322.github.io/">
     <link rel="stylesheet" href="htmllayout.css">
 	</head>
 
