--- a/GUI/GUImenu.html
+++ b/GUI/GUImenu.html
@@ -2,20 +2,21 @@
 <html>
 <head>
   <title>Feng's Portfolio</title>
+  <base href = "https://fengxiong322.github.io/">
   <link rel="stylesheet" href="../htmllayout.css">
 </head>
 
 <body>
   <nav>
-   <a href= "../index.html">Home</a>
+   <a href= "index.html">Home</a>
    <p></p>
-   <a href= "../OOP/OOPmenu.html">OOP</a>
+   <a href = "OOP/OOPmenu.html">OOP</a>
    <p></p>
-   <a class = "current" href="GUImenu.html">GUI</a>
+   <a class "current" href="GUI/GUImenu.html">GUI</a>
    <p></p>
-   <a href="../Projects/projects.html">Projects</a>
+   <a href="Projects/projects.html">Projects</a>
    <p></p>
-   <a href="../about.html">About</a>
+   <a href="about.html">About</a>
  </nav>
 
  <header>
@@ -27,15 +28,15 @@
     <u><b><p>Table of contents</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a class = "current" href="">Welcome to GUI!</a></td>
+        <td><a class = "current" href="GUI/GUImenu.html">Welcome to GUI!</a></td>
       </tr><tr>
-        <td><a href = "GUI-intro/JFrameintro.html">JFrame introduction</a></td>
+        <td><a href = "GUI/GUI-intro/JFrameintro.html">JFrame introduction</a></td>
       </tr><tr>
-        <td><a href="GUI-L1-Feng/GUILesson1.html">GUI Lesson 1</a></td>
+        <td><a href="GUI/GUI-L1-Feng/GUILesson1.html">GUI Lesson 1</a></td>
       </tr><tr>
-        <td><a href="GUI-L2-Feng/GUILesson2.html">GUI Lesson 2</a></td>
+        <td><a href="GUI/GUI-L2-Feng/GUILesson2.html">GUI Lesson 2</a></td>
       </tr><tr>
-        <td><a href="GUI-L3-Feng/GUILesson3.html">GUI Lesson 3</a></td>
+        <td><a href="GUI/GUI-L3-Feng/GUILesson3.html">GUI Lesson 3</a></td>
       </tr>
     </table>
   </aside>
@@ -44,12 +45,12 @@
     <h1>Welcome to GUI!</h1>
     <p>This section contains all of my past work with the java swing library</p>
     <h2>Basic GUI</h2>
-    <p>The first thing to learn about GUI is how to actually create a window to display your information. In the Java swing library, this is called a JFrame. JFrames are made to display information on the screen. You may add components into a JFrame, which allows it to display data. To find out how to use JFrames and add simple things like buttons, vist <a href = "GUI-intro/JFrameintro.html">JFrame introduction</a>.</p>
+    <p>The first thing to learn about GUI is how to actually create a window to display your information. In the Java swing library, this is called a JFrame. JFrames are made to display information on the screen. You may add components into a JFrame, which allows it to display data. To find out how to use JFrames and add simple things like buttons, vist <a href = "GUI/GUI-intro/JFrameintro.html">JFrame introduction</a>.</p>
     <h2>Functionality of GUI</h2>
     <p>Now, we can explore some of the things you can do with java gui. One of the things you will learn is including things like buttons and drawings into you JFrame. Another thing you will learn is ActionListeners. Your JFrame should implement ActionListener if you would like to have interaction between the user and the program. ActionListeners can be added to different components, and can allow you program to respond things like user clicks.</p>
-    <p>You can checkout <a href = "GUI-L1-Feng/GUILesson1.html"> the first gui lesson</a> for more information</p>
+    <p>You can checkout <a href = "GUI/GUI-L1-Feng/GUILesson1.html"> the first gui lesson</a> for more information</p>
     <h2>GUI Layouts</h2>
-    <p>In the next section we talk about the different type of layouts in the Java GUI. In <a href = "GUI-L2-Feng/GUILesson2.html">Lesson 2</a>, I show examples of a flow layout and a group layout.</p>
+    <p>In the next section we talk about the different type of layouts in the Java GUI. In <a href = "GUI/GUI-L2-Feng/GUILesson2.html">Lesson 2</a>, I show examples of a flow layout and a group layout.</p>
     <h2>Putting it Together</h2>
   </article>
 </section>
