--- a/OOP/OOP-L1-Feng/OOPLesson1.html
+++ b/OOP/OOP-L1-Feng/OOPLesson1.html
@@ -1,20 +1,22 @@
+<!DOCTYPE html>
 <html>
    <head>
       <title>OOP Lesson 1</title>
+      <base href = "https://fengxiong322.github.io/">
         <link rel="stylesheet" href="../../htmllayout.css">
    </head>
    <body>
-  <nav>
-   <a href= "../../index.html">Home</a>
-   <p></p>
-   <a class = "current" href = "../OOPmenu.html">OOP</a>
-   <p></p>
-   <a href="../../GUI/GUImenu.html">GUI</a>
-   <p></p>
-   <a href="../../Projects/projects.html">Projects</a>
-   <p></p>
-   <a href="../../about.html">About</a>
- </nav>
+     <nav>
+      <a href= "index.html">Home</a>
+      <p></p>
+      <a class = "current" href = "OOPmenu.html">OOP</a>
+      <p></p>
+      <a href="GUI/GUImenu.html">GUI</a>
+      <p></p>
+      <a href="Projects/projects.html">Projects</a>
+      <p></p>
+      <a href="about.html">About</a>
+    </nav>
   <header>
   <h2>OOP Lesson 1</h2>
 </header>
@@ -23,27 +25,27 @@
     <u><b><p>Table of contents</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a href="../OOPmenu.html">What is OOP?</a></td>
+        <td><a href = "OOP/OOPmenu.html">What is OOP?</a></td>
       </tr><tr>
-        <td><a href = "../OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
+        <td><a href = "OOP/OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
       </tr><tr>
-        <td><a href="../OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
+        <td class = "current"><a href = "OOP/OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
       </tr><tr>
-        <td><a href="../OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
+        <td><a href = "OOP/OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
       </tr><tr>
-        <td><a href="../OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
+        <td><a href = "OOP/OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
       </tr>
     </table>
     <u><b><p>Exercises</p></b></u>
     <table style = "width:100%">
       <tr>
-        <td><a class = "current" href="">OOP Lesson 1</a></td>
+        <td><a class = "current" href="OOP/OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
       </tr><tr>
-        <td><a href = "Exercise1/exercise.html">Exercise 1</a></td>
+        <td><a href = "OOP/OOP-L1-Feng/Exercise1/exercise.html">Exercise 1</a></td>
       </tr><tr>
-        <td><a href="Exercise2/exercise.html">Exercise 2</a></td>
+        <td><a href= "OOP/OOP-L1-Feng/Exercise2/exercise.html">Exercise 2</a></td>
       </tr><tr>
-        <td><a href="Exercise3/exercise.html">Exercise 3</a></td>
+        <td><a href= "OOP/OOP-L1-Feng/Exercise3/exercise.html">Exercise 3</a></td>
       </tr>
     </table>
   </aside>
