--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -2,25 +2,21 @@
 <html>
 <head>
   <title>Feng's Portfolio</title>
+  <base href = "https://fengxiong322.github.io/">
   <link rel="stylesheet" href="../htmllayout.css">
-  <style>
-    article a{
-      target: "_blank";
-    }
-  </style>
 </head>
 
 <body>
   <nav>
-   <a href= "../index.html">Home</a>
+   <a href= "index.html">Home</a>
    <p></p>
-   <a class = "current" href = "OOPmenu.html">OOP</a>
+   <a class = "current" href = "Projects/projects.html">OOP</a>
    <p></p>
-   <a href="../GUI/GUImenu.html">GUI</a>
+   <a href="GUI/GUImenu.html">GUI</a>
    <p></p>
-   <a href="../Projects/projects.html">Projects</a>
+   <a href="Projects/projects.html">Projects</a>
    <p></p>
-   <a href="../about.html">About</a>
+   <a href="about.html">About</a>
  </nav>
  <header>
   <h2>Projects</h2>
