Change colour scheme

--- a/OOP/Advanced1/advanced.html
+++ b/OOP/Advanced1/advanced.html
@@ -2,20 +2,21 @@
 <html>
 <head>
   <title>Feng's Portfolio</title>
+  <base href = "https://fengxiong322.github.io/">
   <link rel="stylesheet" href="../../htmllayout.css">
 </head>
 
 <body>
   <nav>
-   <a href= "../index.html">Home</a>
+   <a href= "index.html">Home</a>
    <p></p>
-   <a class = "current" href = "OOPmenu.html">OOP</a>
+   <a class = "current" href = "OOP/OOPmenu.html">OOP</a>
    <p></p>
-   <a href="../GUI/GUImenu.html">GUI</a>
+   <a href="GUI/GUImenu.html">GUI</a>
    <p></p>
-   <a href="../Projects/projects.html">Projects</a>
+   <a href="Projects/projects.html">Projects</a>
    <p></p>
-   <a href="#about.html">About</a>
+   <a href="about.html">About</a>
  </nav>
 
  <header>
@@ -27,17 +28,17 @@
     <u><b><p>Table of contents</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a href="../OOPMenu.html">What is OOP?</a></td>
+        <td><a href="OOP/OOPMenu.html">What is OOP?</a></td>
       </tr><tr>
-        <td><a href = "../OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
+        <td><a href = "OOP/OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
       </tr><tr>
-        <td><a href="../OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
+        <td><a href="OOP/OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
       </tr><tr>
-        <td><a href="../OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
+        <td><a href="OOP/OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
       </tr><tr>
-        <td><a href="../OOP-L1-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
+        <td><a href="OOP/OOP-L1-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
       </tr><tr>
-        <td class = "current"><a href="Advanced1/advanced.html">Advanced OOP 1</a></td>
+        <td class = "current"><a href="OOP/Advanced1/advanced.html">Advanced OOP 1</a></td>
       </tr>
     </table>
   </aside>
