--- a/OOP/OOPmenu.html
+++ b/OOP/OOPmenu.html
@@ -10,7 +10,7 @@
   <nav>
    <a href= "index.html">Home</a>
    <p></p>
-   <a class = "current" href = "OOPmenu.html">OOP</a>
+   <a class = "current" href = "OOP/OOPmenu.html">OOP</a>
    <p></p>
    <a href="GUI/GUImenu.html">GUI</a>
    <p></p>
