--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
 	<body>
 		<nav>
-  			<a class = "current" href= "index.html">Home</a>
-  			<p></p>
-  			<a href = "OOP/OOPmenu.html">OOP</a>
-  			<p></p>
-  			<a href="GUI/GUImenu.html">GUI</a>
-  			<p></p>
-  			<a href="Projects/projects.html">Projects</a>
-  			<p></p>
-  			<a href="about.html">About</a>
-  	</nav>
+	   <a href= "index.html">HOME</a>
+	   <p></p>
+	   <a href = "OOP/OOPmenu.html">OOP</a>
+	   <p></p>
+	   <a class "current" href="GUI/GUImenu.html">GUI</a>
+	   <p></p>
+	   <a href="Projects/projects.html">PROJECTS</a>
+	   <p></p>
+	   <a href="about.html">ABOUT</a>
+	 </nav>
 
 		<header>
   		<h2>Welcome To My Portfolio!</h2>
