--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 	<body>
 		<nav>
-	   <a href= "index.html">HOME</a>
+	   <a class "current" href= "index.html">HOME</a>
 	   <p></p>
 	   <a href = "OOP/OOPmenu.html">OOP</a>
 	   <p></p>
-	   <a class "current" href="GUI/GUImenu.html">GUI</a>
+	   <a href="GUI/GUImenu.html">GUI</a>
 	   <p></p>
 	   <a href="Projects/projects.html">PROJECTS</a>
 	   <p></p>
@@ -32,9 +32,9 @@
       </tr><tr>
         <td><a href = "OOP/OOPmenu.html">OOP</a></td>
       </tr><tr>
-        <td><a href="GUI/GUImenu.html">GUI</a></td>
+        <td><a href = "GUI/GUImenu.html">GUI</a></td>
       </tr><tr>
-        <td><a href="Projects/projects.html">Projects</a></td>
+        <td><a href = "Projects/projects.html">Projects</a></td>
       </tr><tr>
         <td><a href="about.html">About</a></td>
       </tr>
