add favicons to files with a base url

--- a/OOP/OOP-L1-Feng/OOPLesson1.html
+++ b/OOP/OOP-L1-Feng/OOPLesson1.html
@@ -3,7 +3,8 @@
    <head>
       <title>OOP Lesson 1</title>
       <base href = "https://fengxiong322.github.io/">
-        <link rel="stylesheet" href="../../htmllayout.css">
+      <link rel="icon" type="image/png" href="favicon.ico">
+      <link rel="stylesheet" href="htmllayout.css">
    </head>
    <body>
      <nav>
