--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Feng's Portfolio</title>
 		<base href = "https://fengxiong322.github.io/">
-    <link rel="stylesheet" href="htmllayout.css">
+		<link rel="stylesheet" href="htmllayout.css">
+		<link rel="icon" type="image/png" href="favicon.ico">
 	</head>
 
 	<body>
