--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
   <head>
     <title>About Me</title>
     <base href = "https://fengxiong322.github.io/">
+    <link rel="icon" type="image/png" href="favicon.ico">
     <link rel="stylesheet" href="htmllayout.css">
   </head>
 
