--- a/OOP/Advanced1/advanced.html
+++ b/OOP/Advanced1/advanced.html
@@ -3,7 +3,7 @@
 <head>
   <title>Feng's Portfolio</title>
   <base href = "https://fengxiong322.github.io/">
-  <link rel="icon" type="image/png" href="favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="htmllayout.css">
 </head>
 
