--- a/OOP/OOP-L1-Feng/OOPLesson1.html
+++ b/OOP/OOP-L1-Feng/OOPLesson1.html
@@ -3,7 +3,7 @@
    <head>
       <title>OOP Lesson 1</title>
       <base href = "https://fengxiong322.github.io/">
-      <link rel="icon" type="image/png" href="favicon.ico">
+      <link rel="icon" href="favicon.ico">
       <link rel="stylesheet" href="htmllayout.css">
    </head>
    <body>
