--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Feng's Portfolio</title>
 		<base href = "https://fengxiong322.github.io/">
 		<link rel="stylesheet" href="htmllayout.css">
-		<link rel="icon" type="image/png" href="favicon.ico">
+		<link rel="icon" href="favicon.ico">
 	</head>
 
 	<body>
