--- a/OOP/OOP-FairyTales/OOPFairyTales.html
+++ b/OOP/OOP-FairyTales/OOPFairyTales.html
@@ -52,7 +52,7 @@
          <aside>
             <u>
                <b>
-                  <p>Table of contents</p>
+                  <p>TABLE OF CONTENTS</p>
                </b>
             </u>
             <table style="width:100%">
