--- a/OOP/OOP-L1-Feng/Exercise2/exercise.html
+++ b/OOP/OOP-L1-Feng/Exercise2/exercise.html
@@ -20,7 +20,7 @@
 </header>
  <section>
   <aside>
-    <u><b><p>Table of contents</p></b></u>
+    <u><b><p>TABLE OF CONTENTS</p></b></u>
     <table style="width:100%">
       <tr>
         <td><a href="../OOPLesson1.html">What is OOP?</a></td>
