--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
   <section>
   <aside>
-    <u><b><p>Table of contents</p></b></u>
+    <u><b><p>TABLE OF CONTENTS</p></b></u>
     <table style="width:100%">
       <tr>
         <td><a href="index.html">Home</a></td>
