--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -25,7 +25,7 @@
 
 <section>
   <aside>
-    <u><b><p>Table of contents</p></b></u>
+    <u><b><p>TABLE OF CONTENTS</p></b></u>
     <table style="width:100%">
       <tr>
         <td class = "current"><a href="">My Projects</a></td>
