index.html current class errors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<nav>
-	   <a class "current" href= "index.html">HOME</a>
+	   <a class = "current" href= "index.html">HOME</a>
 	   <p></p>
 	   <a href = "OOP/OOPmenu.html">OOP</a>
 	   <p></p>
@@ -29,7 +29,7 @@
     <u><b><p>TABLE OF CONTENTS</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a class = "current" href="index.html">Home</a></td>
+        <td class = "current"><a href="index.html">Home</a></td>
       </tr><tr>
         <td><a href = "OOP/OOPmenu.html">OOP</a></td>
       </tr><tr>
