--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -11,11 +11,11 @@
   <nav>
    <a href= "index.html">Home</a>
    <p></p>
-   <a class = "current" href = "Projects/projects.html">OOP</a>
+   <a href = "Projects/projects.html">OOP</a>
    <p></p>
    <a href="GUI/GUImenu.html">GUI</a>
    <p></p>
-   <a href="Projects/projects.html">Projects</a>
+   <a class = "current" href="Projects/projects.html">Projects</a>
    <p></p>
    <a href="about.html">About</a>
  </nav>
