--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
 	<body>
 		<nav>
-	   <a class = "current" href= "index.html">HOME</a>
+	   <a class = "current" href= "index.html">Home</a>
 	   <p></p>
 	   <a href = "OOP/OOPmenu.html">OOP</a>
 	   <p></p>
 	   <a href="GUI/GUImenu.html">GUI</a>
 	   <p></p>
-	   <a href="Projects/projects.html">PROJECTS</a>
+	   <a href="Projects/projects.html">Projects</a>
 	   <p></p>
-	   <a href="about.html">ABOUT</a>
+	   <a href="about.html">About</a>
 	 </nav>
 
 		<header>
