--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -11,7 +11,7 @@
   <nav>
    <a href= "index.html">Home</a>
    <p></p>
-   <a href = "Projects/projects.html">OOP</a>
+   <a href = "OOP/OOPmenu.html">OOP</a>
    <p></p>
    <a href="GUI/GUImenu.html">GUI</a>
    <p></p>
